mocked data instead of github API

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
 
   <link href="build/main.css" rel="stylesheet">
 
-</head>
+</head> we5
 <body>
 
   <!-- Ionic's root component and where the app will load -->
